# EasySpot-Client-Linux

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md
packaging/: README.md  build-fedora-rpms.sh  easyspot-linux-client.spec  make-source-tarball.sh
resources/: easyspot-linux-client.desktop  easyspot-linux-client.qrc
src/: AppTypes.h  AutostartManager.cpp  AutostartManager.h  BleHotspotClient.cpp  BleHotspotClient.h  CredentialsDialog.cpp  CredentialsDialog.h  HotspotWorkflowController.cpp  HotspotWorkflowController.h  MainWindow.cpp  MainWindow.h  NetworkManagerWifiController.cpp  NetworkManagerWifiController.h  SecretServicePasswordStore.cpp  SecretServicePasswordStore.h  SettingsStore.cpp  SettingsStore.h  SystemLauncher.cpp  SystemLauncher.h  TrayController.cpp  TrayController.h  main.cpp
tests/: AutostartManagerTests.cpp  CMakeLists.txt  HotspotWorkflowControllerTests.cpp  MainWindowTests.cpp  NetworkManagerWifiControllerTests.cpp  SecretServicePasswordStoreTests.cpp
ui/: CredentialsDialog.ui  MainWindow.ui
